--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Money Cache</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="edit_budget_amount">0.00</string>
+    <string name="edit_budget_category">Category Name</string>
 </resources>
