--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,10 @@
     <string name="edit_date">01/01/21</string>
     <string name="edit_description">Some Buisness</string>
     <string name="edit_amount">$19.99</string>
+    <!--Login-->
+    <string name="go_button_label">GO</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="new_user">New User</string>
+    <string name="login">Login</string>
 </resources>
