--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,27 @@
     <string name="password">Password</string>
     <string name="new_user">New User</string>
     <string name="login">Login</string>
+    <!--Profile-->
+    <string name="profile_title">User Profile</string>
+    <string name="email_address">Email Address</string>
+    <string name="update_profile">Update Profile</string>
+    <!--Budget Impact-->
+    <string name="what_if">What if......?</string>
+    <string name="amount">$ Amount</string>
+    <string name="recurring">Recurring</string>
+    <string name="one_time">One-time</string>
+    <string name="update">Update</string>
+    <string name="clear">Clear</string>
+    <string name="spending_impact">Spending Impact</string>
+    <string name="savings_impact">Savings Impact</string>
+    <string name="update_impact">Update Impact</string>
+    <string name="budget_impact">Budget Impact</string>
+    <string name="clear_impact">Clear Impact</string>
+    <!--Dashboard-->
+    <string name="dashboard">Dashboard</string>
+    <string name="textview">TextView</string>
+    <string name="string_textview">Budget Impact</string>
+    <string name="income_expenses">Income - Expenses = $</string>
+    <string name="future_pie_chart">Future Pie Chart</string>
+    <string name="goal_progress">Goal Progress</string>
 </resources>
