--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,4 +69,5 @@
     <string name="income_expenses">Income - Expenses = $</string>
     <string name="future_pie_chart">Future Pie Chart</string>
     <string name="goal_progress">Goal Progress</string>
+    <string name="get_data_button">Upload Bank Data</string>
 </resources>
