--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,6 +74,7 @@
     <!--Pie Chart -->
     <string name="pie_chart_title">Income vs Expenses</string>
     <string name="inside_title">Expenses</string>
+    <string name="alert_explanation">Category: Money left in budget</string>
     <!--<string name="burn">Burn.</string>
     <string name="cons">Cons.</string>
     <string name="add">Add</string>-->
